c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/extra_credit/bitwise_or.c
int main(void) {
    /* It's illegal to apply bitwise | to doubles */
    double d = 0.0 | -0.0;
    return 0;
}